--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,14 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+<!--        <fragment-->
+<!--            android:id="@+id/myNavHostFragment"-->
+<!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:navGraph="@navigation/navigation"-->
+<!--            app:defaultNavHost="true" />-->
+
         <include layout="@layout/content_main" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
